Fixed overflow on the twitter embed

--- a/app/assets/stylesheets/misc/iframes.css
+++ b/app/assets/stylesheets/misc/iframes.css
@@ -18,6 +18,7 @@ iframe.twitter {
 .page.twitter {
   min-height: 640px;
   padding: 0;
+  overflow: hidden;
 }
 .page.twitter h1 {
   margin: 0;
